[tool.poetry]
name = "vlora"
version = "0.1.0"
description = ""
authors = ["neverusethisname <13056660723@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.2.2+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.17.2+cpu", source = "pytorch_cpu"}
pytest = "^8.1.1"
timm = "^0.9.16"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
