[tool.poetry]
name = "vlora"
version = "0.1.0"
description = ""
authors = ["neverusethisname <13056660723@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
timm = "^0.9.16"
torch = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
