[tool.poetry]
name = "vlora"
version = "0.1.1"
description = ""
authors = ["neverusethisname <13056660723@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
timm = "^0.9.16"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
